variables.Variables.scala.error
Compilation error:
Variables:6: error: value ! is not a member of Int
while (pas !0) {
           ^